[package]
name = "truster"
description = "A ray tracing library based on the book 'The Ray Tracer Challenge' by Jamis Buck."
homepage = "https://github.com/KilianVounckx/truster"
repository = "https://github.com/KilianVounckx/truster"
version = "0.3.0"
edition = "2018"
license = "MIT"
keywords = ["ray-tracing", "graphics", "ray", "tracing"]
exclude = [
	"examples/*.png",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
